[@dhealthdapps/frontend] fix(widgets): title display on mobile, close menu on route change

--- a/runtime/dapp-frontend-vue/src/components/Dropdown/Dropdown.scss
+++ b/runtime/dapp-frontend-vue/src/components/Dropdown/Dropdown.scss
@@ -41,6 +41,10 @@
     border-radius: 8px;
     z-index: 1;
 
+    @media screen and (max-width: 1024px) {
+      right: -100%;
+    }
+
     .action {
       display: flex;
       flex-direction: row;
