--- a/runtime/dapp-frontend-vue/src/components/UserBalance/UserBalance.scss
+++ b/runtime/dapp-frontend-vue/src/components/UserBalance/UserBalance.scss
@@ -21,7 +21,7 @@
   border-radius: 8px;
   background-color: $base-grey-balance;
 
-  @media screen and (max-width: 580px) {
+  @media screen and (max-width: 1024px) {
     max-width: 147px;
     font-size: 16px;
     background-color: #fff;
