--- a/runtime/dapp-frontend-vue/src/views/Dashboard/Dashboard.scss
+++ b/runtime/dapp-frontend-vue/src/views/Dashboard/Dashboard.scss
@@ -134,6 +134,7 @@
     font-size: 30px;
     line-height: 140%;
     margin-bottom: 30px;
+    word-break: break-word;
 
     @media screen and (max-width: 768px) {
       font-size: 24px;
